--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.28", features = ["derive"] }
 serde = { version = "1.0.217", features = ["derive"] }
-toml = "0.8.20"
+toml = { version = "0.8.20", features = ["derive"] }
